hphp/test/zend/good/ext/intl/tests/spoofchecker_004.php.skipif
<?php if(!extension_loaded('intl') || !class_exists("Spoofchecker")) print 'skip'; ?>