hphp/test/zend/bad/ext/intl/tests/idn_uts46_errors.php.skipif
<?php
	if (!extension_loaded('intl'))
		die('skip');
	if (!defined('INTL_IDNA_VARIANT_UTS46'))
		die('skip no UTS #46 API');